--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,10 @@
 *.o
 *.obj
 
-# Precompiled Headers
-*.gch
-*.pch
-
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
-
-# Fortran module files
-*.mod
 
 # Compiled Static libraries
 *.lai
@@ -26,3 +19,39 @@
 *.exe
 *.out
 *.app
+
+# Tarballs
+*.tar.gz
+
+# build dir (by convention)
+/_build/
+
+# autotoolery
+/.deps/
+/INSTALL
+/Makefile
+/Makefile.in
+/aclocal.m4
+/autom4te.cache/
+/build-aux/
+/compile
+/config.guess
+/config.h
+/config.h.in
+/config.log
+/config.status
+/config.sub
+/configure
+/depcomp
+/install-sh
+/libtool
+/ltmain.sh
+/m4/
+/missing
+/paths.h
+/rendera
+/stamp-h1
+/test-driver
+
+# emacs temp files
+*~
