--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_LANG_PUSH([C])
 AC_CONFIG_SRCDIR([soctree.h])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([subdir-objects])
+AM_INIT_AUTOMAKE([subdir-objects foreign tar-pax dist-bzip2 dist-xz])
 LT_PREREQ([2.4.6])
 #LT_INIT([dlopen])
 LT_INIT([disable-shared])
